--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
       </ul>
     </section>
 
+    <video width="640" height="360" controls>
+        <source src="sellos.mp4" type="video/mp4">
+        Tu navegador no soporta el elemento de video.
+    </video>
+
     <section class="referencia">
       <h3>Referencia:</h3>
       <p>Alvarado Osuna, C., & González, L. G. (2023). Avances y efectos de la implementación del nuevo etiquetado de alimentos en México.</p>
